# Harness-Lab

./: .env.example  .gitignore  MAINTENANCE.md  PROJECT_SUMMARY.md  README.md  SUGGESTIONS.md  USAGE.md  push_to_github.bat  pyproject.toml  quick_start.py  requirements.txt  setup_github.md  start_simple.py  test_basic.py  test_workflow.py
backend/app/: __init__.py  main.py
backend/app/core/: __init__.py  intent_analyzer.py  preference_model.py  reasoning_model.py  task_planner.py  vector_db.py  workflow_engine.py
backend/app/harness_lab/: artifact_store.py  bootstrap.py  cli.py  dispatch_queue.py  settings.py  storage.py
backend/app/harness_lab/boundary/: __init__.py  docker_executor.py  executor.py  gateway.py  microvm_executor.py  microvm_stub_executor.py  sandbox.py
backend/app/harness_lab/constraints/: __init__.py  compiler.py  engine.py  parser.py  verifier.py
backend/app/harness_lab/context/: manager.py
backend/app/harness_lab/control_plane/: candidates.py  constraints.py  knowledge.py  runs.py  system.py  websocket_publisher.py  workers.py
backend/app/harness_lab/fleet/: __init__.py  adapters.py  constraints.py  dispatcher.py  lease_manager.py  protocols.py  worker_registry.py
backend/app/harness_lab/improvement/: canary_analysis_service.py  canary_service.py  evaluation_harness.py  service.py
backend/app/harness_lab/knowledge/: __init__.py  service.py
backend/app/harness_lab/orchestrator/: service.py
backend/app/harness_lab/runtime/: execution_plane.py  service.py
backend/app/harness_lab/types/: __init__.py  base.py  improvement.py  knowledge.py  policy_constraint.py  recovery.py  sandbox.py  session_run.py  system.py  tool.py  worker_lease.py
backend/app/harness_lab/workers/: runtime_client.py  service.py
backend/tests/: conftest.py  test_artifact_store_contract.py  test_harness_lab_platform.py  test_knowledge_components.py  test_knowledge_runtime.py  test_sandbox_boundary.py
backend/tests/integration/: test_canary_online_learning.py  test_constraints_integration.py  test_full_lease_flow.py  test_lease_manager_e2e.py  test_lease_manager_v2.py  test_regression_idempotent_events.py
backend/tests/unit/: test_canary_analysis.py  test_canary_rollout.py  test_constraints.py  test_microvm_executor.py  test_sandbox_hardening.py
docker/: Dockerfile.backend  Dockerfile.frontend  docker-compose.yml  nginx.conf
docker/harness-lab-sandbox/: Dockerfile
frontend/: index.html  vite.config.ts
frontend/src/: App.tsx
frontend/src/lab/: api.ts  types.ts
legacy/: execution_plane_old.py
n8n/workflows/: ai_workflow_template.json
scripts/: setup.py  start.py  uninstall.sh
